<resources>
    <string name="app_name">AndroidApp</string>
    <string name="nav_header_title">Android Labs</string>

    <string name="menu_home">Главная</string>
    <string name="menu_tic_tac">1. Игра \"Крестики-нолики\"</string>
    <string name="menu_permissions">2. Работа с разрешениями</string>
    <string name="menu_network">3. Работа с сетью</string>
    <string name="menu_file_system">4. Работа с файловой системой</string>
    <string name="menu_camera">5. Камера</string>
    <string name="menu_local_notes">6. Заметки (SQLite)</string>
    <string name="menu_remote_notes">7. Заметки (Firebase)</string>
    <string name="menu_map">8. Карта</string>
    <string name="menu_sensor">9. Работа с датчиками</string>
    <string name="menu_notification">10. Работа с уведомлениями</string>
    <string name="label_notes_add_new_note">Создание новой заметки</string>
    <string name="label_notes_edit_new_note">Изменение заметки</string>
</resources>