<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tic_tac"
            android:title="@string/menu_tic_tac" />

        <item
            android:id="@+id/nav_network"
            android:title="@string/menu_network" />

        <item
            android:id="@+id/nav_camera"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_local_notes"
            android:title="@string/menu_local_notes" />

        <item
            android:id="@+id/nav_remote_notes"
            android:title="@string/menu_remote_notes" />

        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map" />
    </group>
</menu>