<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.sgakerru.androidapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_tic_tac"
        android:name="ru.sgakerru.androidapp.TicTacFragment"
        android:label="@string/menu_tic_tac"
        tools:layout="@layout/fragment_tic_tac" />
    <fragment
        android:id="@+id/nav_map"
        android:name="ru.sgakerru.androidapp.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_notes"
        android:name="ru.sgakerru.androidapp.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_nav_notes_to_nav_notes_add_note"
            app:destination="@id/nav_notes_add_note" />
    </fragment>
    <fragment
        android:id="@+id/nav_notes_add_note"
        android:name="ru.sgakerru.androidapp.notes.AddNoteFragment"
        android:label="@string/label_notes_add_new_note"
        tools:layout="@layout/fragment_add_note" />

</navigation>